fixing contrast radio on dev

--- a/core/frontend/src/css/app-components/_env-banner.scss
+++ b/core/frontend/src/css/app-components/_env-banner.scss
@@ -18,6 +18,7 @@
 
   &.env-banner-dev {
     background-color: #3c5cff;
+    color: #F2F2F2;
   }
 
   &.env-banner-uat {
@@ -27,8 +28,11 @@
 
   .env-banner__dismiss {
     float: right;
-    color: #0b0c0c !important;
+    color: #F2F2F2 !important;
     text-decoration: none;
+    &.env-banner__dismiss--uat {
+      color: #0b0c0c !important;
+    }
   }
 
   @media (min-width: 800px ){
